adjusting storesnapshot to storeCatalog